feat: 查询虚拟机列表&&获取虚拟机配置